<resources>
    <string name="app_name">Instagram</string>
    <string name="button">Button</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="take_picture">Take Picture</string>
    <string name="description">Description...</string>
    <string name="sign_up_for_account">Sign Up for Account</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>