<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginLayout"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/nav_logo_whiteout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:id="@+id/loginLayout">

        <EditText
            android:id="@+id/etSignupUsername"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etSignupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etSignupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/register" />

    </LinearLayout>
</RelativeLayout>