<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ProgressBar
        android:id="@+id/pbLoading"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCaptureImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_picture"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPhotos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/from_photos" />

        <ImageView
            android:id="@+id/ivPostImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>

</LinearLayout>
</RelativeLayout>